--- a/src/login/login.css
+++ b/src/login/login.css
@@ -102,8 +102,8 @@ div.kc-logo-text span {
 
 #kc-header-wrapper {
     font-size: 29px;
-    text-transform: uppercase;
-    letter-spacing: 3px;
+    text-transform: none;
+    letter-spacing: 0;
     line-height: 1.2em;
     padding: 62px 10px 20px;
     white-space: normal;
